; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/tipc/extr_core.c_tipc_core_start_net.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/tipc/extr_core.c_tipc_core_start_net.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tipc_core_start_net(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = call i32 @tipc_net_start(i64 %4)
  store i32 %5, i32* %3, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %10, label %7

7:                                                ; preds = %1
  %8 = call i32 (...) @tipc_eth_media_start()
  store i32 %8, i32* %3, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %7, %1
  %11 = call i32 (...) @tipc_core_stop_net()
  br label %12

12:                                               ; preds = %10, %7
  %13 = load i32, i32* %3, align 4
  ret i32 %13
}

declare dso_local i32 @tipc_net_start(i64) #1

declare dso_local i32 @tipc_eth_media_start(...) #1

declare dso_local i32 @tipc_core_stop_net(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
